k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-app
  namespace: cloud-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cloud-app
    spec:
      containers:
        - name: cloud-app
          image: maxcojocari/cloud-app:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
