k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: cloud-app
spec:
  selector:
    app: cloud-app
  ports:
    - port: 80
      targetPort: 3000
